2003-07-03  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: added support for ports other than 21,
	patch from msofer -- thanks.
	
2003-06-16  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: added '-output ::vfs::log' to ftp
        initialisation code to avoid messages being dumped to stderr
        when errors occur.
	
2003-05-16  Vince Darley <vincentdarley@sourceforge.net>

	* library/tkvfs.tcl: added 'tk' widget hierarchy vfs.  Use:
	     package require vfs::tk
	     vfs::tk::Mount .frame.a.b foo
	     cd foo
	     ...
	  to examine.
	* library/pkgIndex.tcl(.in): added new package.
	
2003-05-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/pkgIndex.tcl.in: use vfs::dll var directly

2003-05-14  Vince Darley <vincentdarley@sourceforge.net>

	* library/vfsUtils.tcl: fix to package names
	* library/mk4vfs.tcl: fix to 'file attributes' implementation
	
2003-04-29  Vince Darley <vincentdarley@sourceforge.net>

	* library/zipvfs.tcl: patterns in 'glob' should be case-insensitive
	since everything else is.
	
2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.

2003-03-17  Jean-Claude Wippler  <jcw@equi4.com>

	* pkgIndex.tcl, pkgIndex.tcl.in: mk4vfs rev bumped to 1.9
	* mk4vfs.tcl: reverted to old translucent/readwrite open modes

2003-03-11  Andreas Kupries  <andreask@activestate.com>

	* doc/vfs.man:             Added doctools documentation derived
	* doc/vfs-fsapi.man:       from the original nroff-based
	* doc/vfs-filesystems.man: manpages. Approved by Vincent.

2003-03-11  Vince Darley <vincentdarley@sourceforge.net>

	* library/pkgIndex.tcl:
	* win/makefile.vc: updated for Tcl's incompatible change 
	from 'd' to 'g' for debug builds.

2003-02-24  Jean-Claude Wippler  <jcw@equi4.com>

	* pkgIndex.tcl, pkgIndex.tcl.in: starkit rev bumped to 1.2
	* starkit.tcl: more contexts, panic ok if "." already gone
